--- a/Home.html
+++ b/Home.html
@@ -42,5 +42,21 @@
       </div>
     </nav>
 </body>
-
+<main>
+  <div class="card">
+  <div class="card-header">
+    Quote
+  </div>
+  <div class="card-body">
+    <figure>
+      <blockquote class="blockquote">
+        <p>A well-known quote, contained in a blockquote element.</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+        Someone famous in <cite title="Source Title">Source Title</cite>
+      </figcaption>
+    </figure>
+  </div>
+</div>
+</main>
 </html>
