--- a/Home.html
+++ b/Home.html
@@ -36,7 +36,7 @@
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <!-- Login -->
-        <a href="#" class="btn btn-success px-3 rounded-pill">Login / Signup</a>
+        <a href="signup.html" class="btn btn-success px-3 rounded-pill"> Signup</a>
       </div>
     </div>
   </nav>
