product page done

--- a/Home.html
+++ b/Home.html
@@ -54,19 +54,15 @@
     <!-- Links -->
     <div class="collapse navbar-collapse" id="bottomNavbarContent">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
 
         <!-- Products Offcanvas Trigger -->
-        <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="offcanvas" href="#offcanvasProducts" role="button"
-            aria-controls="offcanvasProducts">Products</a>
-        </li>
-
-        <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Deals</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+         <li class="nav-item"><a class="nav-link" href="">HOME</a></li>
+         <li class="nav-item"><a class="nav-link" href="product.html">PRODUCT</a></li>
+        <li class="nav-item"><a class="nav-link" href="">SERVICE</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">DEAL</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">ABOUT US</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">BLOG</a></li>
+        <li class="nav-item"><a class="nav-link" href="">CONTACT</a></li>
 
        
 
@@ -87,29 +83,6 @@
 
 
   <!-- PRODUCT OFFCANVAS (Side Panel) -->
-  <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasProducts" aria-labelledby="offcanvasProductsLabel">
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasProductsLabel"><i class="fa fa-box-open me-2"></i>Our Products</h5>
-      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div class="offcanvas-body">
-      <!-- Search inside products -->
-      <form class="d-flex mb-3">
-        <input class="form-control me-2" type="search" placeholder="Search products..." aria-label="Search">
-        <button class="btn btn-success" type="submit"><i class="fa fa-search"></i></button>
-      </form>
-
-      <!-- Product List -->
-      <div class="list-group">
-        <a href="#" class="list-group-item">Almonds</a>
-        <a href="#" class="list-group-item">Cashews</a>
-        <a href="#" class="list-group-item">Walnuts</a>
-        <a href="#" class="list-group-item">Pistachios</a>
-        <a href="#" class="list-group-item">Raisins</a>
-        <a href="#" class="list-group-item">Mixed Dry Fruits</a>
-      </div>
-    </div>
-  </div>
 
   <!-- CONTENT -->
  <!-- SLIDER / CAROUSEL -->
