--- a/login/signup.html
+++ b/login/signup.html
@@ -34,7 +34,7 @@
       <button type="submit" class="btn">Sign Up</button>
     </form>
     <div class="options">
-      <p>Already have an account? <a href="test.html">Login</a></p>
+      <p>Already have an account? <a href="../login/login.html">Login</a></p>
     </div>
   </div>
 
