--- a/product.html
+++ b/product.html
@@ -54,13 +54,13 @@
 
           <!-- Products Sidebar Trigger -->
           <li class="nav-item">
-            <a class="nav-link" id="productsLink" href="#" role="button">Products</a>
+            <a class="nav-link" id="productsLink" href="product.html" role="button">Products</a>
           </li>
 
           <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Deals</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="aboutus.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Cart</a></li>
         </ul>
@@ -114,7 +114,6 @@
       <h3 class="text-success">Welcome to DryFruitHub</h3>
       <p class="text-muted">Select a product from the sidebar to view our delicious dry fruits</p>
     </div>
-  </div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
