--- a/login/signup.html
+++ b/login/signup.html
@@ -1,42 +1,408 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dry Fruit Store - Signup</title>
-  <link rel="stylesheet" href="signup.css">
-</head>
-<body>
+  <title>DryFruitHub - Account System</title>
 
-  <div class="signup-container">
-    <h2>Join Us 🥭</h2>
-    <form>
-      <div class="form-group">
-        <label>First Name</label>
-        <input type="text" placeholder="Enter your First name" required>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- FontAwesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="../login/signup.css">
+  <link rel="stylesheet" href="../Home.css">
+</head>
+
+<body>
+  <!-- Authentication Container (Login/Signup) -->
+  <div class="auth-container" id="auth-container">
+    <div class="form-container">
+      <div class="tabs">
+        <div class="tab active" id="login-tab">Login</div>
+        <div class="tab" id="signup-tab">Sign Up</div>
       </div>
-      <div class="form-group">
-        <label>Last Name</label>
-        <input type="text" placeholder="Enter your Last name" required>
-      </div>
-      <div class="form-group">
-        <label>Email Address</label>
-        <input type="email" placeholder="Enter your email" required>
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input type="password" placeholder="Create a password" required>
-      </div>
-      <div class="form-group">
-        <label>Confirm Password</label>
-        <input type="password" placeholder="Confirm your password" required>
-      </div>
-      <button type="submit" class="btn">Sign Up</button>
-    </form>
-    <div class="options">
-      <p>Already have an account? <a href="../login/login.html">Login</a></p>
+
+      <!-- Login Form -->
+      <form class="form active" id="login-form">
+        <h2>Welcome Back</h2>
+        <div class="form-group">
+          <label for="login-email">Email</label>
+          <input type="email" id="login-email" placeholder="Enter your email" required>
+        </div>
+        <div class="form-group">
+          <label for="login-password">Password</label>
+          <input type="password" id="login-password" placeholder="Enter your password" required>
+        </div>
+        <div class="forgot-password">
+          <a href="#">Forgot Password?</a>
+        </div>
+        <button type="submit">Login</button>
+        <div class="message" id="login-message"></div>
+      </form>
+
+      <!-- Signup Form -->
+      <form class="form" id="signup-form">
+        <h2>Create Account</h2>
+        <div class="form-group">
+          <label for="signup-name">Full Name</label>
+          <input type="text" id="signup-name" placeholder="Enter your full name" required>
+        </div>
+        <div class="form-group">
+          <label for="signup-email">Email</label>
+          <input type="email" id="signup-email" placeholder="Enter your email" required>
+        </div>
+        <div class="form-group">
+          <label for="signup-password">Password</label>
+          <input type="password" id="signup-password" placeholder="Create a password" required>
+        </div>
+        <div class="form-group">
+          <label for="signup-confirm">Confirm Password</label>
+          <input type="password" id="signup-confirm" placeholder="Confirm your password" required>
+        </div>
+        <button type="submit">Sign Up</button>
+        <div class="message" id="signup-message"></div>
+      </form>
     </div>
   </div>
 
+  <!-- Profile Page (Initially Hidden) -->
+  <div class="profile-page" id="profile-page">
+    <!-- Header -->
+    <header class="profile-header">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg">
+          <a class="navbar-brand" href="../Home.html">
+            <i class="fa-solid fa-seedling me-2"></i>
+            <span>DryFruitHub</span>
+          </a>
+
+          <div class="header-actions">
+            <a href="../Home.html" class="btn-back" id="back-to-store">
+              <i class="fa fa-arrow-left me-2"></i>
+              Back to Store
+            </a>
+            <div class="user-welcome">
+              Welcome, <span id="userName">User</span>!
+            </div>
+          </div>
+        </nav>
+      </div>
+    </header>
+
+    <!-- Main Profile Section -->
+    <main class="profile-main">
+      <div class="container">
+        <div class="row">
+          <!-- Sidebar Navigation -->
+          <div class="col-lg-3">
+            <div class="profile-sidebar">
+              <!-- User Card -->
+              <div class="user-card">
+                <div class="user-avatar">
+                  <img src="https://via.placeholder.com/100" alt="User Avatar" id="userAvatar">
+                  <button class="avatar-edit" onclick="openAvatarModal()">
+                    <i class="fa fa-camera"></i>
+                  </button>
+                </div>
+                <div class="user-info">
+                  <h4 id="displayUserName">John Doe</h4>
+                  <p class="user-email" id="userEmail">john.doe@email.com</p>
+                  <div class="user-status">
+                    <span class="status-badge verified">
+                      <i class="fa fa-check-circle"></i> Verified
+                    </span>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Navigation Menu -->
+              <nav class="profile-nav">
+                <a href="#personal-info" class="nav-item active" data-section="personal-info">
+                  <i class="fa fa-user"></i>
+                  <span>Personal Info</span>
+                </a>
+                <a href="#orders" class="nav-item" data-section="orders">
+                  <i class="fa fa-shopping-bag"></i>
+                  <span>My Orders</span>
+                  <span class="badge">5</span>
+                </a>
+                <a href="#addresses" class="nav-item" data-section="addresses">
+                  <i class="fa fa-map-marker-alt"></i>
+                  <span>Addresses</span>
+                </a>
+                <a href="#wishlist" class="nav-item" data-section="wishlist">
+                  <i class="fa fa-heart"></i>
+                  <span>Wishlist</span>
+                  <span class="badge">12</span>
+                </a>
+                <a href="#reviews" class="nav-item" data-section="reviews">
+                  <i class="fa fa-star"></i>
+                  <span>My Reviews</span>
+                </a>
+                <a href="#security" class="nav-item" data-section="security">
+                  <i class="fa fa-shield-alt"></i>
+                  <span>Security</span>
+                </a>
+                <a href="#notifications" class="nav-item" data-section="notifications">
+                  <i class="fa fa-bell"></i>
+                  <span>Notifications</span>
+                </a>
+                <a href="#payment-methods" class="nav-item" data-section="payment-methods">
+                  <i class="fa fa-credit-card"></i>
+                  <span>Payment Methods</span>
+                </a>
+                <a href="#" class="nav-item" id="logout-link">
+                  <i class="fa fa-sign-out-alt"></i>
+                  <span>Logout</span>
+                </a>
+              </nav>
+
+              <!-- Quick Stats -->
+              <div class="quick-stats">
+                <div class="stat-item">
+                  <div class="stat-value" id="totalOrders">5</div>
+                  <div class="stat-label">Total Orders</div>
+                </div>
+                <div class="stat-item">
+                  <div class="stat-value" id="totalSpent">PKR 12,500</div>
+                  <div class="stat-label">Total Spent</div>
+                </div>
+                <div class="stat-item">
+                  <div class="stat-value" id="memberSince">2024</div>
+                  <div class="stat-label">Member Since</div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Main Content -->
+          <div class="col-lg-9">
+            <div class="profile-content">
+              <!-- Personal Information Section -->
+              <section id="personal-info" class="content-section active">
+                <div class="section-header">
+                  <h3><i class="fa fa-user me-2"></i>Personal Information</h3>
+                  <button class="btn-edit" onclick="toggleEdit('personal-info')">
+                    <i class="fa fa-edit"></i> Edit
+                  </button>
+                </div>
+
+                <div class="section-content">
+                  <form id="personalInfoForm">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          <label>First Name</label>
+                          <input type="text" class="form-control" id="firstName" value="John" readonly>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          <label>Last Name</label>
+                          <input type="text" class="form-control" id="lastName" value="Doe" readonly>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          <label>Email Address</label>
+                          <input type="email" class="form-control" id="email" value="john.doe@email.com" readonly>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          <label>Phone Number</label>
+                          <input type="tel" class="form-control" id="phone" value="+92 300 1234567" readonly>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label>Date of Birth</label>
+                      <input type="date" class="form-control" id="dob" value="1990-01-15" readonly>
+                    </div>
+
+                    <div class="form-group">
+                      <label>Gender</label>
+                      <select class="form-control" id="gender" disabled>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                        <option value="other">Other</option>
+                      </select>
+                    </div>
+
+                    <div class="form-actions" style="display: none;">
+                      <button type="button" class="btn btn-secondary"
+                        onclick="cancelEdit('personal-info')">Cancel</button>
+                      <button type="submit" class="btn btn-primary">Save Changes</button>
+                    </div>
+                  </form>
+                </div>
+              </section>
+
+              <!-- Orders Section -->
+              <section id="orders" class="content-section">
+                <div class="section-header">
+                  <h3><i class="fa fa-shopping-bag me-2"></i>Order History</h3>
+                  <div class="filter-options">
+                    <select class="form-select" id="orderFilter">
+                      <option value="all">All Orders</option>
+                      <option value="pending">Pending</option>
+                      <option value="delivered">Delivered</option>
+                      <option value="cancelled">Cancelled</option>
+                    </select>
+                  </div>
+                </div>
+
+                <div class="section-content">
+                  <div class="orders-list">
+                    <p>Your order history will appear here.</p>
+                  </div>
+                </div>
+              </section>
+
+              <!-- Addresses Section -->
+              <section id="addresses" class="content-section">
+                <div class="section-header">
+                  <h3><i class="fa fa-map-marker-alt me-2"></i>Saved Addresses</h3>
+                  <button class="btn btn-primary" onclick="openAddressModal()">
+                    <i class="fa fa-plus"></i> Add New Address
+                  </button>
+                </div>
+
+                <div class="section-content">
+                  <div class="addresses-grid">
+                    <p>Your saved addresses will appear here.</p>
+                  </div>
+                </div>
+              </section>
+
+              <!-- Wishlist Section -->
+              <section id="wishlist" class="content-section">
+                <div class="section-header">
+                  <h3><i class="fa fa-heart me-2"></i>My Wishlist</h3>
+                </div>
+
+                <div class="section-content">
+                  <div class="wishlist-items">
+                    <p>Your wishlist items will appear here.</p>
+                  </div>
+                </div>
+              </section>
+
+              <!-- Reviews Section -->
+              <section id="reviews" class="content-section">
+                <div class="section-header">
+                  <h3><i class="fa fa-star me-2"></i>My Reviews</h3>
+                </div>
+
+                <div class="section-content">
+                  <p>Your reviews will appear here.</p>
+                </div>
+              </section>
+
+              <!-- Security Section -->
+              <section id="security" class="content-section">
+                <div class="section-header">
+                  <h3><i class="fa fa-shield-alt me-2"></i>Security</h3>
+                </div>
+
+                <div class="section-content">
+                  <p>Security settings will appear here.</p>
+                </div>
+              </section>
+
+              <!-- Notifications Section -->
+              <section id="notifications" class="content-section">
+                <div class="section-header">
+                  <h3><i class="fa fa-bell me-2"></i>Notifications</h3>
+                </div>
+
+                <div class="section-content">
+                  <p>Notification settings will appear here.</p>
+                </div>
+              </section>
+
+              <!-- Payment Methods Section -->
+              <section id="payment-methods" class="content-section">
+                <div class="section-header">
+                  <h3><i class="fa fa-credit-card me-2"></i>Payment Methods</h3>
+                </div>
+
+                <div class="section-content">
+                  <p>Your payment methods will appear here.</p>
+                </div>
+              </section>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- Footer -->
+  <!-- FOOTER -->
+  <footer class="footer mt-5">
+    <div class="container">
+      <div class="row gy-4">
+        <div class="col-md-4 col-sm-6">
+          <h4 class="logo-text"><i class="fa-solid fa-seedling me-2"></i>DryFruitHub</h4>
+          <p>Premium quality dry fruits delivered fresh to your doorstep.</p>
+          <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </div>
+        </div>
+        <div class="col-md-2 col-sm-6">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled">
+            <li><a href="../Home.html">Home</a></li>
+            <li><a href="../product.html">Products</a></li>
+            <li><a href="../service.html">Services</a></li>
+            <li><a href="../aboutus.html">About Us</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <h5>Customer Service</h5>
+          <ul class="list-unstyled">
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Shipping & Returns</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <h5>Newsletter</h5>
+          <p>Subscribe to get updates on discounts and new arrivals.</p>
+          <form class="newsletter-form">
+            <input type="email" placeholder="Enter your email" required>
+            <button type="submit"><i class="fa fa-paper-plane"></i></button>
+          </form>
+        </div>
+      </div>
+      <hr class="my-4">
+      <div class="text-center">
+        <p class="mb-0">&copy; 2025 DryFruitHub. All Rights Reserved.</p>
+      </div>
+    </div>
+  </footer>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Custom JavaScript -->
+  <script src="../login/signup.js"></script>
 </body>
+<script src="../User/profile.js"></script>
+
 </html>
