--- a/store.html
+++ b/store.html
@@ -1,19 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasProducts">
+    <div class="offcanvas-header">
+      <h5><i class="fa fa-box-open me-2"></i>Our Products</h5>
+      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
+    </div>
+    <div class="offcanvas-body">
+      <form class="d-flex mb-3">
+        <input class="form-control me-2" type="search" placeholder="Search products...">
+        <button class="btn btn-success" type="submit"><i class="fa fa-search"></i></button>
+      </form>
+      <div class="list-group">
+        <a href="#" class="list-group-item">Almonds</a>
+        <a href="#" class="list-group-item">Cashews</a>
+        <a href="#" class="list-group-item">Walnuts</a>
+        <a href="#" class="list-group-item">Pistachios</a>
+        <a href="#" class="list-group-item">Raisins</a>
+        <a href="#" class="list-group-item">Mixed Dry Fruits</a>
+      </div>
+    </div>
+  </div>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dry Fruit Store</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- FontAwesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <link rel="stylesheet" href="product.css">
-</head>
 
-<body>
-  <!-- TOP NAVBAR -->
+
+  nav//
   <nav class="navbar navbar-expand-lg top-navbar sticky-top">
     <div class="container-fluid">
       <!-- Logo -->
@@ -37,8 +45,11 @@
     </div>
   </nav>
 
-  <!-- BOTTOM NAVBAR -->
-  <nav class="navbar navbar-expand-lg bottom-navbar">
+
+
+
+
+    <nav class="navbar navbar-expand-lg bottom-navbar">
     <div class="container-fluid">
       <!-- Mobile Menu Button -->
       <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
@@ -74,52 +85,3 @@
       </div>
     </div>
   </nav>
-
-  <!-- SIDEBAR -->
-  <div class="sidebar" id="sidebar">
-    <div class="sidebar-header">
-      <h5><i class="fa fa-box-open me-2"></i>Our Products</h5>
-    </div>
-    
-    <!-- Search inside products -->
-    <form class="d-flex mb-3 px-3">
-      <input class="form-control me-2" type="search" placeholder="Search products..." aria-label="Search">
-      <button class="btn btn-success" type="submit"><i class="fa fa-search"></i></button>
-    </form>
-
-    <!-- Product List -->
-    <div class="list-group">
-      <a href="#" class="list-group-item" data-product="almonds">Almonds</a>
-      <a href="#" class="list-group-item" data-product="cashews">Cashews</a>
-      <a href="#" class="list-group-item" data-product="walnuts">Walnuts</a>
-      <a href="#" class="list-group-item" data-product="pistachios">Pistachios</a>
-      <a href="#" class="list-group-item" data-product="raisins">Raisins</a>
-      <a href="#" class="list-group-item" data-product="mixed">Mixed Dry Fruits</a>
-    </div>
-  </div>
-
-  <!-- MAIN CONTENT AREA -->
-  <div class="main-content" id="mainContent">
-    <!-- Product cards will be displayed here -->
-    <div class="product-container" id="productContainer">
-      <h2 class="product-title" id="productTitle"></h2>
-      <div class="row" id="productCards">
-        <!-- Cards will be inserted here by JavaScript -->
-      </div>
-    </div>
-
-    <!-- Default content when no product is selected -->
-    <div class="text-center py-5" id="defaultContent">
-      <i class="fa-solid fa-seedling fa-5x mb-3" style="color: #2E7D32;"></i>
-      <h3 class="text-success">Welcome to DryFruitHub</h3>
-      <p class="text-muted">Select a product from the sidebar to view our delicious dry fruits</p>
-    </div>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="product.js"></script>
-  
-  <!-- Custom JavaScript -->
-</body>
-
-</html>
